--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Vòng quay lì xì 2020 by GrouSrlpPrsc</title>
+      <title>Vòng quay lì xì 2020</title>
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Francois+One&amp;display=swap'>
       <link rel='stylesheet' href='css/sweetalert.css'>
       <link rel='stylesheet' href='css/custom.css'>
@@ -73,7 +73,7 @@
        
    </body>
    <script>
-    var matkhau = "mycode";
+    var matkhau = "wibu048";
     var solanquay = 5;
       // Sau khi load trang sẽ yêu cầu nhập mật khẩu
       function nhappass() {
